added new link to del app and ip app

--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -33,12 +33,16 @@
           <a class="menu__link" href="">Apply</a>
           <ul class="submenu">
             <li class="menu__item">
-              <a class="menu__link" href="../forms/delegate.html"
+              <a
+                class="menu__link"
+                href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
                 >Delegate Application</a
               >
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="../forms/international.html"
+              <a
+                class="menu__link"
+                href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
                 >International Press Application</a
               >
             </li>
@@ -156,10 +160,14 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../forms/delegate.html">Delegate Application</a>
+                    <a
+                      href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
+                      >Delegate Application</a
+                    >
                   </li>
                   <li>
-                    <a href="../forms/international.html"
+                    <a
+                      href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
                       >International Press Application</a
                     >
                   </li>
@@ -242,7 +250,9 @@
           </div>
         </div>
 
-        <label id="enrollment-label" for="enrollment">Amity Enrollment No.</label>
+        <label id="enrollment-label" for="enrollment"
+          >Amity Enrollment No.</label
+        >
         <input id="enrollment" name="enrollment" type="text" />
 
         <label for="">Academic Year</label>
@@ -339,7 +349,8 @@
           ></textarea>
 
           <label for="answer"
-            >What do you believe are the different Challenges and Opportunities in the Post COVID-19 World?</label
+            >What do you believe are the different Challenges and Opportunities
+            in the Post COVID-19 World?</label
           >
 
           <textarea
