--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
           <a class="menu__link" href="">Apply</a>
           <ul class="submenu">
             <li class="menu__item">
-              <a class="menu__link" href="./forms/delegate.html"
+              <a
+                class="menu__link"
+                href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
                 >Delegate Application</a
               >
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="./forms/international.html"
+              <a
+                class="menu__link"
+                href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
                 >International Press Application</a
               >
             </li>
@@ -118,7 +122,12 @@
     <div id="back">
       <p class="banner">
         Registration for AMIMUN 2022 has opened.
-        <a href="./forms/delegate.html"> <u>Register now</u> </a> !
+        <a
+          href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
+        >
+          <u>Register now</u>
+        </a>
+        !
       </p>
       <nav>
         <div class="menu-bar">
@@ -163,10 +172,14 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./forms/delegate.html">Delegate Application</a>
+                    <a
+                      href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
+                      >Delegate Application</a
+                    >
                   </li>
                   <li>
-                    <a href="./forms/international.html"
+                    <a
+                      href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
                       >International Press Application</a
                     >
                   </li>
@@ -244,9 +257,18 @@
             </h1>
             <h3 class="quote">&mdash; Michael Chiesa</h3> -->
             <!-- <p id="timer"></p> -->
-            <a href="./forms/delegate.html" class="btn">REGISTER</a>
+            <a
+              href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
+              class="btn"
+              >REGISTER</a
+            >
           </div>
-          <img src="./assets/pexels-mathias-pr-reding-4468974-2.jpg" id="vid" alt="" srcset="">
+          <img
+            src="./assets/pexels-mathias-pr-reding-4468974-2.jpg"
+            id="vid"
+            alt=""
+            srcset=""
+          />
           <!-- <video
             id="vid"
             src="./assets/movie.mp4"
