--- a/committees/unfccc.html
+++ b/committees/unfccc.html
@@ -33,12 +33,12 @@
         <a class="menu__link" href="">Apply</a>
         <ul class="submenu">
           <li class="menu__item">
-            <a class="menu__link" href="../forms/delegate.html"
+            <a class="menu__link" href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx"
               >Delegate Application</a
             >
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="../forms/international.html"
+            <a class="menu__link" href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
               >International Press Application</a
             >
           </li>
@@ -156,10 +156,10 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="../forms/delegate.html">Delegate Application</a>
+                    <a href="https://www.amity.edu/SPG/AMIMUN2022/register/DelegateForm.aspx">Delegate Application</a>
                   </li>
                   <li>
-                    <a href="../forms/international.html"
+                    <a href="https://www.amity.edu/SPG/AMIMUN2022/register/IPForm.aspx"
                       >International Press Application</a
                     >
                   </li>
