--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </nav>
 
       <div class="header-section">
-        <h2 class="header theme">Preserverantia Omnia Vincit<br /></h2>
+        <h2 class="header theme">Perserverantia Omnia Vincit<br /></h2>
         <h3 class="header-sec">
           <b>January 22<sup>nd</sup> &mdash; January 23<sup>rd</sup>, 2022</b
           ><br />
