--- a/gallery.html
+++ b/gallery.html
@@ -226,245 +226,245 @@
       <div class="container">
         <div class="gallery">
           <a
-            href=" + ./gallery-imgs/DSC_4294.JPG"
+            href="./gallery-imgs/DSC_4294.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4294.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/IMG_7008.jpg"
+            href="./gallery-imgs/IMG_7008.jpg"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/IMG_7008.jpg" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0557.JPG"
+            href="./gallery-imgs/DSC_0557.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0557.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0552.JPG"
+            href="./gallery-imgs/DSC_0552.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0552.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4119.JPG"
+            href="./gallery-imgs/DSC_4119.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4119.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4125.JPG"
+            href="./gallery-imgs/DSC_4125.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4125.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0545.JPG"
+            href="./gallery-imgs/DSC_0545.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0545.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_3924.JPG"
+            href="./gallery-imgs/DSC_3924.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_3924.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/IMG_7320.JPG"
+            href="./gallery-imgs/IMG_7320.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/IMG_7320.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4197.JPG"
+            href="./gallery-imgs/DSC_4197.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4197.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4020.JPG"
+            href="./gallery-imgs/DSC_4020.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4020.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0508.JPG"
+            href="./gallery-imgs/DSC_0508.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0508.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4021.JPG"
+            href="./gallery-imgs/DSC_4021.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4021.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0446.JPG"
+            href="./gallery-imgs/DSC_0446.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0446.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0452.JPG"
+            href="./gallery-imgs/DSC_0452.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0452.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0532.JPG"
+            href="./gallery-imgs/DSC_0532.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0532.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0106.JPG"
+            href="./gallery-imgs/DSC_0106.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0106.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/Wide 1.JPG"
+            href="./gallery-imgs/Wide 1.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/Wide 1.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4217.JPG"
+            href="./gallery-imgs/DSC_4217.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4217.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0464.JPG"
+            href="./gallery-imgs/DSC_0464.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0464.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC07012.JPG"
+            href="./gallery-imgs/DSC07012.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC07012.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0507.JPG"
+            href="./gallery-imgs/DSC_0507.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0507.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_3999.JPG"
+            href="./gallery-imgs/DSC_3999.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_3999.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4129.JPG"
+            href="./gallery-imgs/DSC_4129.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4129.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/WA_2.JPG"
+            href="./gallery-imgs/WA_2.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/WA_2.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4128.JPG"
+            href="./gallery-imgs/DSC_4128.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4128.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/PIC 3.jpg"
+            href="./gallery-imgs/PIC 3.jpg"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/PIC 3.jpg" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0562.JPG"
+            href="./gallery-imgs/DSC_0562.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0562.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/WA_1.jpg"
+            href="./gallery-imgs/WA_1.jpg"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/WA_1.jpg" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4103.JPG"
+            href="./gallery-imgs/DSC_4103.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4103.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0567.JPG"
+            href="./gallery-imgs/DSC_0567.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0567.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0360.JPG"
+            href="./gallery-imgs/DSC_0360.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0360.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_4104.JPG"
+            href="./gallery-imgs/DSC_4104.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_4104.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0570.JPG"
+            href="./gallery-imgs/DSC_0570.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
             <img src="./gallery-imgs/DSC_0570.JPG" />
           </a>
           <a
-            href=" + ./gallery-imgs/DSC_0565.JPG"
+            href="./gallery-imgs/DSC_0565.JPG"
             data-lightbox="models"
             data-title="Caption1"
           >
